# p2p-share

./: .clang-format  .env  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
client/: HttpServer.py  client.py
include/: FileMetaData.hpp  HttpServer.hpp  InMemoryPeerStorage.hpp  P2PServer.hpp  PeerInfo.hpp  PeerStorage.hpp  RedisPeerStorage.hpp  Utils.hpp
src/: HttpServer.cpp  InMemoryPeerStorage.cpp  P2PServer.cpp  RedisPeerStorage.cpp  Utils.cpp  client.py  main.cpp
